Fix toggle appearance on iOS 1808

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -207,7 +207,9 @@
                 display: flex;
                 flex-direction: row;
 
-                .cp-form-view-drag {
+                button.cp-form-view-drag {
+                    margin: 0;
+                    padding: 1px 4px;
                     width: 30px;
                     height: 30px;
                     border: none;
